Fix: align-items in footer

--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -4,7 +4,7 @@
     padding: 3rem 0
   &-top
     display: flex
-    align-items: end
+    align-items: flex-end
     justify-content: space-between
     flex-wrap: wrap
     margin-bottom: 3rem
